<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_cap"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:backgroundTint="#336013"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/validar"
        app:cornerRadius="-1dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#000000"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_per"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:backgroundTint="#449F04"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/perfil"
        app:cornerRadius="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/btn_mj"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:backgroundTint="#336013"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/jocs"
        app:cornerRadius="-1dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_per"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_cap"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_apt"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:backgroundTint="#336013"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/teoria"
        app:cornerRadius="-1dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="246dp"
        android:layout_height="178dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_user"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <Button
        android:id="@+id/button15"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#336013"
        android:text="@string/editar_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <Button
        android:id="@+id/button16"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#336013"
        android:text="@string/pantalla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button17"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#336013"
        android:text="@string/so_i_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button18"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#336013"
        android:text="@string/ranking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#336013"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/btnLo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#336013"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="63dp"
        android:layout_height="32dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="68dp"
        android:text="@string/punts"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="63dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:paddingStart="10dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>