<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.technoPia.primersAuxilis.interfaces.MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="193dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/primers_auxilis"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="193dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="210dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btn_apt"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="#336013"
        android:text="@string/teoria"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_mj"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#336013"
        android:text="@string/jocs"
        android:textColor="#FDFDFD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_cap"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#336013"
        android:text="@string/validar"
        android:textColor="#FDFDFD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_apt" />

    <Button
        android:id="@+id/btn_per"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#336013"
        android:text="@string/perfil"
        android:textColor="#FDFDFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mj" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>